--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="clearfix colelem" id="u94-4"><!-- content -->
-    <p>send emil e-sheckles</p>
+    <p>This site mines XMR</p>
    </div>
    <div class="clearfix colelem" id="pu138"><!-- group -->
     <div class="clip_frame grpelem" id="u138"><!-- image -->
