--- a/contact.html
+++ b/contact.html
@@ -2,38 +2,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" >
 	<head>
 		<meta http-equiv="content-type" content="text/html" charset="utf-8" />
-		<title>home</title>
+		<title>contact</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" >
 		<link rel="StyleSheet" href="index.css" />
 		<script src="https://secure.exportkit.com/cdn/js/ek_googlefonts.js"></script>
 
+
 	</head>
 	<body>
 		<div id="content-container" >
-			<div id="page_index_ek1"  >
-				<div id="_bg__index_ek2"  ></div>
-				<div id="__p__emil_gora_s_official_unofficial_site" >
-					emil gora's official unofficial site
+
+
+
+
+			<div id="page_contact_ek2"  >
+				<div id="_bg__contact_ek3"  ></div>
+				<div id="back_ek3" >
+					<a href="index.html">back</a>
 				</div>
-				<div id="__p__contact" >
-					<a href="contact.html">contact</a>
+				<div id="__p__phone_number__586_789_5925" >
+					phone number: 586-789-5925
 				</div>
-				<div id="__p__crypto_addresses" >
-					<a href="crypto_addresses.html">crypto addresses</a>
+				<div id="__p__email__emilgora_protonmail_ch" >
+					email: emilgora@protonmail.ch
 				</div>
-				<div id="__p__blog" >
-					<a href="blog.html">blog</a>
-				</div>
-				<div id="__p__bothered_to_update_last_on_01_01_2020" >
-					bothered to update last on 01/01/2020
+				<div id="__p__github_page" >
+					GitHub Page
 				</div>
 
 			</div>
-
-
-
-
 		</div>
 	</body>
 </html>
