--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 			<div id="page_blog_ek2"  >
 				<div id="_bg__blog_ek3"  ></div>
 				<div id="back_ek1" >
-					<a href="index.html">back</a>
+					<a href="https://emil.ws">back</a>
 				</div>
 				<div id="__p__blogspot__blog_emil_ws" >
 					<a href="https://blog.emil.ws">blogspot: blog.emil.ws</a>
