--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,8 @@
 				<div id="__p__blogspot__blog_emil_ws" >
 					<a href="https://blog.emil.ws">blogspot: blog.emil.ws</a>
 				</div>
+				
+				<iframe src="https://player.twitch.tv/?channel=notmonkee&parent=www.example.com"></iframe>
 
 			</div>
 
