--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
 				</div>
 
 			</div>
-				<iframe src="https://player.twitch.tv/?channel=notmonkee&parent=www.example.com"></iframe>
+				<iframe src="https://player.twitch.tv/?channel=notmonkee&parent=www.emil.ws"></iframe>
 
 		</div>
 	</body>
