--- a/capstone.html
+++ b/capstone.html
@@ -1,5 +1,12 @@
-YAML Configuration for ESPHome
-https://github.com/emilgora/Silvia-ESP32
+<!DOCTYPE html>
+<html>
+<meta charset="utf-8"/>
 
-ZACWire for ESPHome forked library
-https://github.com/emilgora/?
+<title>Capstone</title>
+
+<div> YAML Configuration for ESPHome:</div>
+<div>https://github.com/emilgora/Silvia-ESP32</div>
+<div>---</div>
+<div>ZACWire for ESPHome forked library:</div>
+<div>https://github.com/emilgora/?</div>
+</html>
