--- a/capstone.html
+++ b/capstone.html
@@ -4,9 +4,5 @@
 
 <title>Capstone</title>
 
-<div> YAML Configuration for ESPHome:</div>
+<div> Silvia ESP32 YAML config:</div>
 <div>https://github.com/emilgora/Silvia-ESP32</div>
-<div>---</div>
-<div>ZACWire for ESPHome forked library:</div>
-<div>https://github.com/emilgora/?</div>
-</html>
