--- a/capstone.html
+++ b/capstone.html
@@ -4,5 +4,4 @@
 
 <title>Capstone</title>
 
-<div> Silvia ESP32 YAML config:</div>
-<div>https://github.com/emilgora/Silvia-ESP32</div>
+<a href="https://github.com/emilgora/Silvia-ESP32">Silvia ESP32 YAML config</a>
