--- a/capstone.html
+++ b/capstone.html
@@ -4,4 +4,4 @@
 
 <title>Capstone</title>
 
-<a href="https://github.com/emilgora/Silvia-ESP32">Silvia ESP32 YAML config</a>
+<a href="https://github.com/emilgora/emilgora.github.io/blob/master/capstone.pdf">Research paper available here</a>
