--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
 <body>
 <div id="home">
 	<div id="emilgora">
-		<span>Emil       Gora</span>
+		<a href="links.html">
+			<img src ="logo.svg" style="height:700px; width: 400px; display:block; margin:auto;" />
+		</a>
 	</div>
-	<div id="minimalist">
-		<span>the official minimalist website</span>
-	</div>
-	<div id="here">
-		<span>(that means there's not much here)</span>
-	</div>
-	<div id="links">
-		<a href="links.html">Click me for cool links</a>
-	</div>
+
 </div>
 </body>
 </html>
