--- a/links.html
+++ b/links.html
@@ -13,12 +13,8 @@
 		<a href="https://github.com/emilgora">GitHub</a>
 	</div>
 
-	<div id="Blogger">
-		<a href="https://blog.emil.ws/">Blogger</a>
-	</div>
-
-	<div id="Bandcamp">
-		<a href="https://overflows.bandcamp.com/releases">Bandcamp</a>
+	<div id="Sketchfab">
+		<a href="https://sketchfab.com/emilgora">Sketchfab</a>
 	</div>
 
 </div>
